force-app/main/default/objects/Doctor__c/fields/Administrative_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Contacts__c</fullName>
    <label>Administrative Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>