force-app/main/default/objects/Doctor__c/fields/Compass_Address__c.field-meta.xml
<CustomField>
    <fullName>Compass_Address__c</fullName>
    <label>Compass Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>