force-app/main/default/objects/Doctor__c/fields/Compass_Doctor_Code__c.field-meta.xml
<CustomField>
    <fullName>Compass_Doctor_Code__c</fullName>
    <label>Compass Doctor Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>