force-app/main/default/objects/Doctor__c/fields/Compass_Doctor_Dates__c.field-meta.xml
<CustomField>
    <fullName>Compass_Doctor_Dates__c</fullName>
    <label>Compass Doctor Dates</label>
    <type>Date</type>
</CustomField>