force-app/main/default/objects/Doctor__c/fields/Compass_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Compass_Provider_Number__c</fullName>
    <label>Compass Provider Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>