force-app/main/default/objects/Doctor__c/fields/Doctor_Type__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Type__c</fullName>
    <label>Doctor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compass Doctor</fullName>
            </value>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>