force-app/main/default/objects/Doctor__c/fields/Prescriber_Number__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Number__c</fullName>
    <label>Prescriber Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>