force-app/main/default/objects/Doctor__c/fields/SMS_When_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>SMS_When_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS When Task Created</label>
    <type>Checkbox</type>
</CustomField>