force-app/main/default/objects/Doctor__c/fields/Test_Image__c.field-meta.xml
<CustomField>
    <fullName>Test_Image__c</fullName>
    <label>Test Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>