force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Provider_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>