force-app/main/default/objects/Doctor__c/listViews/All_Referring_Doctors.listView-meta.xml
<ListView>
    <fullName>All_Referring_Doctors</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Provider_Number__c</columns>
    <columns>Practice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Doctor_Type__c</field>
        <operation>equals</operation>
        <value>General Practitioner,Other</value>
    </filters>
    <label>All Referring Doctors</label>
</ListView>