force-app/main/default/objects/Doctor__c/listViews/allSelection_Doctor.listView-meta.xml
<ListView>
    <fullName>allSelection_Doctor</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>