force-app/main/default/objects/Doctor__c/listViews/Compass_Doctors.listView-meta.xml
<ListView>
    <fullName>Compass_Doctors</fullName>
    <columns>NAME</columns>
    <columns>Provider_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Doctor_Type__c</field>
        <operation>equals</operation>
        <value>Compass Doctor</value>
    </filters>
    <label>Compass Doctors</label>
</ListView>